[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Turrel.gd" type="Script" id=1]
[ext_resource path="res://Images/explosion4.png" type="Texture" id=2]
[ext_resource path="res://Images/explosion5.png" type="Texture" id=3]
[ext_resource path="res://Images/explosion1.png" type="Texture" id=4]
[ext_resource path="res://Images/explosion3.png" type="Texture" id=5]
[ext_resource path="res://Images/explosion2.png" type="Texture" id=6]
[ext_resource path="res://Images/specialBarrel1_outline.png" type="Texture" id=7]
[ext_resource path="res://Images/tank_darkLarge.png" type="Texture" id=8]
[ext_resource path="res://animations/shooot.tscn" type="PackedScene" id=9]

[sub_resource type="Shader" id=5]
code = " shader_type canvas_item;

uniform bool grayscale = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	if (grayscale) { 
		COLOR.rbg = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
	}
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/grayscale = false

[sub_resource type="Shader" id=1]
code = " shader_type canvas_item;

uniform bool grayscale = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	
	if (grayscale) { 
		COLOR.rbg = vec3(dot(COLOR.rgb, vec3(0.299, 0.587, 0.114)));
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/grayscale = false

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.6287, 25.2047 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "boom",
"speed": 12.0
} ]

[node name="Turrel" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )

[node name="tank_npc" type="Sprite" parent="."]
material = SubResource( 6 )
rotation = 3.14159
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 8 )

[node name="tank_npc3" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
position = Vector2( 1, -66 )
scale = Vector2( 0.590785, -0.607875 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.01526e-06, -7.15256e-07 )
rotation = 3.14159
scale = Vector2( 0.609045, -0.595127 )
shape = SubResource( 3 )

[node name="shooot2" parent="." instance=ExtResource( 9 )]
visible = true
position = Vector2( 6, -15 )
rotation = 2.47725e-06
scale = Vector2( 0.487236, -0.476102 )

[node name="shooot" parent="." instance=ExtResource( 9 )]
visible = true
position = Vector2( -6, -15 )
rotation = 2.47725e-06
scale = Vector2( 0.487236, -0.476102 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -2, -22 )
scale = Vector2( 0.609045, -0.595127 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 3, -22 )
scale = Vector2( 0.609045, -0.595127 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 1, 0 )
scale = Vector2( 0.609045, -0.595127 )

[node name="hpbar" type="ProgressBar" parent="Node2D"]
modulate = Color( 0.878431, 0.184314, 0.184314, 1 )
margin_left = -32.8383
margin_top = 31.926
margin_right = 37.1617
margin_bottom = 46.926

[node name="reloadprogress" type="ProgressBar" parent="Node2D"]
margin_left = -32.0
margin_top = 45.0
margin_right = 38.0
margin_bottom = 60.0
value = 50.0

[node name="Area2D" type="Area2D" parent="."]
rotation = -1.57079
scale = Vector2( 0.595127, -0.609045 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 105.86, -3.28318 )
scale = Vector2( 12.2678, 3.6081 )
polygon = PoolVector2Array( 9.31389, 6.82615, 9.03998, -7.28084, -6.1636, -6.37102, -5.75272, 8.19103 )

[node name="boom_player" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, 0 )
rotation = 3.14159
scale = Vector2( 0.609045, -0.595127 )
frames = SubResource( 4 )
animation = "boom"

[connection signal="animation_finished" from="shooot2" to="." method="_on_shooot2_animation_finished"]
[connection signal="animation_finished" from="shooot" to="." method="_on_shooot_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="boom_player" to="." method="_on_boom_player_animation_finished"]
